added skills router, removed needless id return
